--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,8 @@
 
         {% endblock %}
 
-        {% block short_url %}
-    
+        {% block shortened_url %}
+
         {% endblock %}
 
         <!-- Footer / Credits -->
