--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 {% endblock %}
 
-{% block shorten_url %}
+{% block shortened_url %}
     {% if short_url %}
         <div class="mt-8 p-4 bg-green-700 text-green-100 border border-green-600 rounded-lg text-center">
             <p class="text-lg">Your shortened URL is:</p>
